misc/monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  annotations:
    instrumentation.opentelemetry.io/inject-python: "openobserve-collector/openobserve"
spec:
  selector:
    app: monitoring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3100
      nodePort: 30004
  type: NodePort  # Change to 'ClusterIP' if you don't need external access
