misc/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host : weatherapp #your DNS 
     http:
       paths:
         - path: /mapi
           pathType: Prefix
           backend:
             service:
               name: mapi-service
               port:
                 number: 80
         - path: /wapi
           pathType: Prefix
           backend:
             service:
               name: wapi-service
               port:
                 number: 80
         - path: /
           pathType: Prefix
           backend:
             service:
               name: webapp-service
               port:
                 number: 80
